<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="es.luisbarreiros.proyecto.pastillApp.ui.home.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_medications" />

    <fragment
        android:id="@+id/nav_favs"
        android:name="es.luisbarreiros.proyecto.pastillApp.ui.home.TomaFragment"
        android:label="@string/menu_meds"
        tools:layout="@layout/fragment_medications" />

    <fragment
        android:id="@+id/nav_personales"
        android:name="es.luisbarreiros.proyecto.pastillApp.ui.home.StocksFragment"
        android:label="@string/menu_existencias"
        tools:layout="@layout/fragment_medications" />
</navigation>