<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newMedication.NewMedicationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="350dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_93"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal_50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.75" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal_93"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.9" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_nombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Nombre*"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_93"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_7"
                app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_7">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_uso"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/uso"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_93"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_7"
                app:layout_constraintTop_toBottomOf="@id/til_nombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_uso"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/url"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_93"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_7"
                app:layout_constraintTop_toBottomOf="@id/til_uso">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_url"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_imagen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/imagen"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_93"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_7"
                app:layout_constraintTop_toBottomOf="@id/til_url">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_imagen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_numero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/cantidad_toma"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_93"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_7"
                app:layout_constraintTop_toBottomOf="@id/til_imagen">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_numero"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/ll_horariosS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_93"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_7"
                app:layout_constraintTop_toBottomOf="@+id/til_numero">

                <CheckBox
                    android:id="@+id/manana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/manana"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/tarde"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tarde"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/noche"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/noche"
                    android:textSize="20sp" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/double_default"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="110dp"
                android:text="@string/guardar"
                android:textSize="24sp"
                app:cornerRadius="1dp"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_93"
                app:layout_constraintTop_toBottomOf="@id/ll_horariosS" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/double_default"
                android:backgroundTint="@color/md_theme_dark_errorContainer"
                android:text="@string/eliminar"
                android:visibility="gone"
                app:cornerRadius="1dp"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_7"
                app:layout_constraintTop_toBottomOf="@id/ll_horariosS" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>