<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sign.RegistroActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_93"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_93"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logo"
        android:layout_width="290dp"
        android:layout_height="220dp"
        android:layout_marginTop="-25dp"
        android:padding="0dp"
        android:rotationX="15"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_93"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_7"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_7"
        app:shapeAppearanceOverlay="@style/ShapeableImageViewCard"
        app:srcCompat="@drawable/logo"
        app:strokeColor="@color/black"
        app:strokeWidth="0dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/username"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_93"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_7"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/contrasenya"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_93"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_7"
        app:layout_constraintTop_toBottomOf="@id/til_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/repeat_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_93"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_7"
        app:layout_constraintTop_toBottomOf="@id/til_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_93"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_7"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_50">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelar"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_weight="1"
            android:text="@string/cancelar"
            android:textColorLink="#00695C"
            app:icon="@drawable/ic_baseline_close_24"
            app:cornerRadius="0dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registro"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_weight="1"
            android:text="@string/registro"
            app:icon="@drawable/ic_baseline_person_add_24"
            app:cornerRadius="0dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>