<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_margin"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="@dimen/default_margin"
    app:strokeColor="@color/md_theme_dark_surfaceVariant"
    app:strokeWidth="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/double_default">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imagen"
            android:layout_width="280dp"
            android:layout_height="230dp"
            app:layout_constraintBottom_toTopOf="@+id/nombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nombre"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/uso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imagen" />

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nombre" />

        <TextView
            android:id="@+id/uso"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/numero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll1" />

        <TextView
            android:id="@+id/numero"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/url"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uso" />

        <TextView
            android:id="@+id/url"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numero" />

        <TextView
            android:id="@+id/horarioS"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/horario"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/ll2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/url" />

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:showDividers="middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horarioS">

            <ImageView
                android:id="@+id/manana"
                android:layout_width="36dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:contentDescription="@string/logo_manana"
                android:src="@drawable/ic_google_brands" />

            <ImageView

                android:id="@+id/tarde"
                android:layout_width="36dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:contentDescription="@string/logo_tarde"
                android:src="@drawable/ic_tarde_brands" />

            <ImageView

                android:id="@+id/noche"
                android:layout_width="36dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:contentDescription="@string/logo_noche"
                android:src="@drawable/ic_noche_brands" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/like"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:paddingStart="26dp"
            android:paddingEnd="0dp"
            app:cornerRadius="0dp"
            android:visibility="gone"
            app:icon="@drawable/ic_baseline_medicacion_24"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toStartOf="@id/stock"
            app:layout_constraintTop_toBottomOf="@id/ll2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/stock"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginEnd="12dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:paddingStart="26dp"
            android:paddingEnd="0dp"
            app:cornerRadius="0dp"
            android:visibility="gone"
            app:icon="@drawable/ic_baseline_alerta_existencias_24"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="@id/like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/like" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>